--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=order-products
 ## Datasource configuration for MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/unir_order_book
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## JPA Configuration
@@ -26,7 +26,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 ## Configuration for Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.instance.hostname=${HOSTNAME:localhost}
 
 server.port=8080
