--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
 
-  my-microservice:
-    image: products
-    container_name: products
+  order-products:
+    image: order-products
+    container_name: order-products
     ports:
-      - "8086:8086"
+      - "8081:8081"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/book
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_URL: ${DB_URL:jdbc:mysql://localhost:3306/railway}
+      SPRING_DATASOURCE_USERNAME: ${DB_USER:root}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD:pwd}
     depends_on:
       - mysql
 
