--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.application.name=order-products
 ##spring.datasource.password=pwd
 
 ## Datasource configuration for MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/unir_order_book
-spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/unir_order_book}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:pwd}
+spring.datasource.driver-class-name=${DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 ## JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -18,12 +18,22 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 ##spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ##spring.jpa.hibernate.ddl-auto=update
 ##spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+## Configuración de HikariCP (pool de conexiones)
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+
+## Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=none
 
 ## Configuration for Eureka
 eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
